src/components/layouts/BlogLayout.module.scss
@use '../../styles/queries';

.Content {
  position: relative;
  max-width: 52rem;
}

.ScrollUpContainer {
  position: fixed;
  bottom: 0;
  right: 0;
  opacity: 1;
  padding: var(--gap-very-large);
  transition: var(--duration-medium) var(--easing);
  transition-property: opacity, transform;
  
  @media (max-width: queries.$mw-mobile) {
    padding: var(--gap-large);
  }

  &:not([data-scrolled="true"]) {
    transition: var(--duration-short) var(--easing-quick);
    opacity: 0;
    transform: scale(0.75);
    pointer-events: none;
  }
}

